--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "joi": "^17.9.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "pug": "^3.0.2"
   }
 }
